# LectorPDF

./: .dockerignore  .gitignore  LectorPDF - Idea.txt  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: cleaner.py  pdf_parser.py
backend/app/services/: tts_handler.py
backend/tests/: stress_test.py  test_api.py  test_cleaner.py  test_security.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Reader.jsx  Uploader.jsx
frontend/src/tests/: Reader.test.jsx  Uploader.test.jsx
