[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lectorpdf-backend"
version = "0.1.0"
description = "Motor de procesamiento PDF y texto para LectorPDF"
authors = [{name = "Desarrollador LectorPDF"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.28.0",
    "pdfplumber",
    "python-multipart"
]

[project.optional-dependencies]
dev = [
    "pytest==8.1.1",
    "httpx==0.27.2"
]
